k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orangelvira-com-web
  annotations:
   cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx 
  tls:
     - hosts:
       - orangelvira.com
       - www.orangelvira.com
       secretName: letsencrypt-nginx-orangelvira-com-web
  rules:
    - host: orangelvira.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orangelvira-com-web
                port:
                  name: http
    - host: www.orangelvira.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orangelvira-com-web
                port:
                  name: http
